Bug 1923826 - [Menu Redesign] Separate the content descriptions for each menu bottom sheet. r=android-reviewers,boek
Differential Revision: https://phabricator.services.mozilla.com/D225187

UltraBlame original commit: 2769378eaed1aaf348103d338ccdb0eb35350fd2

--- a/mobile/android/fenix/app/src/main/res/values/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values/strings.xml
@@ -5171,59 +5171,6 @@ for
 bottom
 sheet
 handlebar
-.
-The
-placeholder
-will
-be
-updated
-by
-for
-example
-"
-Main
-menu
-"
-.
--
--
->
-<
-string
-name
-=
-"
-browser_menu_handlebar_content_description
-"
->
-Close
-%
-1
-s
-sheet
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-(
-not
-visible
-for
-screen
-readers
-etc
-.
-)
-for
-bottom
-sheet
-handlebar
 main
 menu
 .
@@ -5238,8 +5185,10 @@ name
 browser_main_menu_handlebar_content_description
 "
 >
-Main
+Close
+main
 menu
+sheet
 <
 /
 string
@@ -5277,8 +5226,10 @@ name
 browser_extensions_menu_handlebar_content_description
 "
 >
-Extensions
+Close
+extensions
 menu
+sheet
 <
 /
 string
@@ -5316,8 +5267,10 @@ name
 browser_save_menu_handlebar_content_description
 "
 >
-Save
+Close
+save
 menu
+sheet
 <
 /
 string
@@ -5355,8 +5308,10 @@ name
 browser_tools_menu_handlebar_content_description
 "
 >
-Tools
+Close
+tools
 menu
+sheet
 <
 /
 string
@@ -5395,9 +5350,11 @@ name
 browser_custom_tab_menu_handlebar_content_description
 "
 >
-Custom
+Close
+custom
 tab
 menu
+sheet
 <
 /
 string
