Bug 1923268 - Update soft/hard block strings. r=rpl,fluent-reviewers,android-reviewers,bolsson,delphine,amejiamarmol
Differential Revision: https://phabricator.services.mozilla.com/D225047

UltraBlame original commit: 2ff5f3aaf8413d7106853dc95bec5add8b3ef4a8

--- a/mobile/android/android-components/components/feature/addons/src/main/res/values/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values/strings.xml
@@ -4622,6 +4622,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4642,6 +4656,75 @@ stability
 or
 security
 problems
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+violates
+Mozilla
+s
+policies
+and
+can
+t
+be
+installed
+on
+%
+2
+s
 .
 <
 /
@@ -4768,6 +4851,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4781,6 +4878,76 @@ can
 t
 be
 installed
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+violates
+Mozilla
+s
+policies
+and
+can
+t
+be
+installed
+on
+%
+2
+s
 .
 <
 /
@@ -5883,6 +6050,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -5896,6 +6077,71 @@ security
 or
 stability
 issues
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+This
+extension
+is
+blocked
+for
+violating
+Mozilla
+s
+policies
+and
+has
+been
+disabled
 .
 <
 /
@@ -5939,10 +6185,91 @@ name
 "
 mozac_feature_addons_status_softblocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 This
 extension
 violates
+Mozilla
+s
+policies
+and
+has
+been
+disabled
+.
+You
+can
+enable
+it
+but
+this
+may
+be
+risky
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+This
+extension
+is
+restricted
+for
+violating
 Mozilla
 s
 policies
