Bug 1911007 - use a more accurate error message for certificates issued by CAs that are no longer trusted r=jschanck,fluent-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D225424

UltraBlame original commit: 01acf84531d37fa19d0bcd6f6196c6a6601308d2

--- a/security/manager/locales/en-US/chrome/pipnss/nsserrors.properties
+++ b/security/manager/locales/en-US/chrome/pipnss/nsserrors.properties
@@ -3959,3 +3959,20 @@ self
 -
 signed
 .
+MOZILLA_PKIX_ERROR_ISSUER_NO_LONGER_TRUSTED
+=
+The
+certificate
+authority
+that
+issued
+the
+certificate
+was
+distrusted
+before
+the
+certificate
+was
+issued
+.
