no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: b6255da7f2205178ceea45e394168aa31ad38a88

--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-cs/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-cs/strings.xml
@@ -4349,13 +4349,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4412,6 +4428,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4432,6 +4464,40 @@ nepoda
 ilo
 nainstalovat
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Roz
+en
+nelze
+nainstalovat
 <
 /
 string
@@ -4820,6 +4886,63 @@ platform
 nen
 podporov
 no
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+poru
+uje
+pravidla
+Mozilly
+a
+nelze
+ho
+nainstalovat
 .
 <
 /
@@ -5900,6 +6023,40 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Podrobnosti
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5962,6 +6119,138 @@ konov
 ch
 d
 vod
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+Toto
+roz
+en
+poru
+uje
+pravidla
+Mozilly
+a
+bylo
+proto
+zak
+z
+no
+.
+M
+ete
+to
+povolit
+na
+vlastn
+riziko
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Toto
+roz
+en
+poru
+uje
+pravidla
+Mozilly
+.
+Jeho
+pou
+v
+n
+je
+na
+vlastn
+riziko
 .
 <
 /
