--- a/mobile/android/fenix/app/src/main/res/values-ja/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-ja/strings.xml
@@ -1422,6 +1422,20 @@ name
 "
 tcp_cfr_message
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 <
 /
@@ -1457,6 +1471,20 @@ name
 =
 "
 tcp_cfr_learn_more
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Cookie
@@ -3098,6 +3126,65 @@ icon
 used
 to
 add
+extension
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+extension
+(
+for
+example
+:
+ClearURLs
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_extension_plus_icon_content_description_2
+"
+>
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Label
+for
+plus
+icon
+used
+to
+add
 extensions
 .
 -
@@ -3109,6 +3196,20 @@ name
 =
 "
 browser_menu_extension_plus_icon_content_description
+"
+moz
+:
+removedIn
+=
+"
+124
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 <
@@ -37395,6 +37496,20 @@ name
 "
 review_quality_check_first_cfr_message
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 <
 /
@@ -37434,6 +37549,13 @@ name
 "
 review_quality_check_first_cfr_action
 "
+moz
+:
+removedIn
+=
+"
+132
+"
 tools
 :
 ignore
@@ -37471,6 +37593,20 @@ name
 =
 "
 review_quality_check_second_cfr_message
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 <
@@ -37510,6 +37646,13 @@ name
 =
 "
 review_quality_check_second_cfr_action
+"
+moz
+:
+removedIn
+=
+"
+132
 "
 tools
 :
@@ -44858,6 +45001,43 @@ debug_drawer_cfr_tools_reset_cfr_title
 "
 >
 CFR
+<
+/
+string
+>
+<
+!
+-
+-
+Glean
+debug
+tools
+-
+-
+>
+<
+!
+-
+-
+The
+title
+of
+the
+glean
+debugging
+feature
+-
+-
+>
+<
+string
+name
+=
+"
+glean_debug_tools_title
+"
+>
+Glean
 <
 /
 string
