--- a/mobile/android/fenix/app/src/main/res/values-sat/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-sat/strings.xml
@@ -44252,6 +44252,102 @@ string
 Text
 shown
 in
+prompt
+for
+search
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_prompt_search_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Firefox
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+prompt
+for
+sync
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_prompt_sync_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Firefox
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
 the
 survey
 title
@@ -44331,6 +44427,110 @@ name
 =
 "
 microsurvey_homepage_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Firefox
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+the
+survey
+title
+for
+search
+experience
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_search_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Firefox
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+the
+survey
+title
+for
+sync
+experience
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_sync_title
 "
 tools
 :
@@ -44783,6 +44983,43 @@ string
 !
 -
 -
+Glean
+debug
+tools
+-
+-
+>
+<
+!
+-
+-
+The
+title
+of
+the
+glean
+debugging
+feature
+-
+-
+>
+<
+string
+name
+=
+"
+glean_debug_tools_title
+"
+>
+Glean
+<
+/
+string
+>
+<
+!
+-
+-
 Messages
 explaining
 how
@@ -44881,6 +45118,116 @@ ignore
 =
 "
 UnusedResources
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+gesture
+navigation
+is
+enabled
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_gesture_short
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+using
+back
+button
+navigation
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_back_button_short
 "
 >
 <
