--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-da/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-da/strings.xml
@@ -4186,13 +4186,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4246,6 +4262,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4264,6 +4296,40 @@ installere
 denne
 udvidelse
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Kan
+ikke
+installere
+udvidelse
 <
 /
 string
@@ -4635,6 +4701,63 @@ ttes
 p
 denne
 platform
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+overtr
+der
+Mozillas
+politikker
+og
+kan
+ikke
+installeres
 .
 <
 /
@@ -5662,6 +5785,41 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Vis
+detaljer
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5718,6 +5876,137 @@ sikkerheds
 -
 eller
 stabilitetsproblemer
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+Denne
+udvidelse
+overtr
+der
+Mozillas
+politikker
+og
+er
+blevet
+deaktiveret
+.
+Du
+kan
+aktivere
+den
+men
+det
+kan
+v
+re
+risikabelt
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Denne
+udvidelse
+overtr
+der
+Mozillas
+politikker
+.
+Det
+kan
+v
+re
+risikabelt
+at
+bruge
+den
 .
 <
 /
