--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-es/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-es/strings.xml
@@ -4231,13 +4231,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4291,6 +4307,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4313,6 +4345,43 @@ esta
 extensi
 n
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+No
+se
+puede
+instalar
+la
+extensi
+n
 <
 /
 string
@@ -4694,6 +4763,66 @@ compatible
 con
 esta
 plataforma
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+viola
+las
+pol
+ticas
+de
+Mozilla
+y
+no
+se
+puede
+instalar
 .
 <
 /
@@ -5728,6 +5857,41 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Ver
+detalles
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5784,6 +5948,138 @@ de
 seguridad
 o
 estabilidad
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+Esta
+extensi
+n
+viola
+las
+pol
+ticas
+de
+Mozilla
+y
+ha
+sido
+desactivada
+.
+Se
+puede
+activar
+pero
+podr
+a
+ser
+arriesgado
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Esta
+extensi
+n
+viola
+las
+pol
+ticas
+de
+Mozilla
+.
+Usarla
+podr
+a
+ser
+arriesgado
 .
 <
 /
