--- a/security/manager/locales/en-US/chrome/pipnss/nsserrors.properties
+++ b/security/manager/locales/en-US/chrome/pipnss/nsserrors.properties
@@ -3959,6 +3959,31 @@ self
 -
 signed
 .
+MOZILLA_PKIX_ERROR_INSUFFICIENT_CERTIFICATE_TRANSPARENCY
+=
+The
+server
+presented
+insufficient
+certificate
+transparency
+information
+.
+Its
+certificate
+may
+not
+have
+been
+publicly
+disclosed
+and
+it
+may
+have
+been
+misissued
+.
 MOZILLA_PKIX_ERROR_ISSUER_NO_LONGER_TRUSTED
 =
 The
