--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-cy/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-cy/strings.xml
@@ -4653,6 +4653,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Nid
 oedd
@@ -4671,6 +4685,78 @@ problemau
 sefydlogrwydd
 neu
 ddiogelwch
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+Mae
+%
+1
+s
+yn
+torri
+polis
+au
+Mozilla
+ac
+nid
+oes
+modd
+ei
+osod
+ar
+%
+2
+s
 .
 <
 /
@@ -4809,6 +4895,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Mae
 %
@@ -4826,6 +4926,79 @@ oes
 modd
 ei
 osod
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+Mae
+%
+1
+s
+yn
+torri
+polis
+au
+Mozilla
+ac
+nid
+oes
+modd
+ei
+osod
+ar
+%
+2
+s
 .
 <
 /
@@ -5940,6 +6113,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Mae
 %
@@ -5953,6 +6140,81 @@ problemau
 diogelwch
 neu
 sefydlogrwydd
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Mae
+\
+'
+r
+estyniad
+hwn
+wedi
+\
+'
+i
+rwystro
+am
+dorri
+polis
+au
+Mozilla
+ac
+mae
+wedi
+\
+'
+i
+analluogi
 .
 <
 /
@@ -5996,6 +6258,20 @@ name
 "
 mozac_feature_addons_status_softblocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Mae
 \
@@ -6007,6 +6283,83 @@ yn
 groes
 i
 bolis
+au
+Mozilla
+ac
+mae
+wedi
+\
+'
+i
+analluogi
+.
+Gallwch
+ei
+alluogi
+ond
+gall
+hyn
+fod
+yn
+beryglus
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Mae
+\
+'
+r
+estyniad
+hwn
+wedi
+\
+'
+i
+gyfyngu
+am
+dorri
+polis
 au
 Mozilla
 ac
