--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-de/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-de/strings.xml
@@ -4588,6 +4588,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4608,6 +4622,74 @@ t
 und
 Sicherheit
 darstellt
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+verletzt
+Mozillas
+Richtlinien
+und
+kann
+nicht
+auf
+%
+2
+s
+installiert
+werden
 .
 <
 /
@@ -4735,6 +4817,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4745,6 +4841,75 @@ Richtlinien
 und
 kann
 nicht
+installiert
+werden
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+verletzt
+Mozillas
+Richtlinien
+und
+kann
+nicht
+auf
+%
+2
+s
 installiert
 werden
 .
@@ -5858,6 +6023,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -5870,6 +6049,71 @@ und
 Stabilit
 tsgr
 nden
+deaktiviert
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Diese
+Erweiterung
+wurde
+wegen
+Versto
+es
+gegen
+Mozillas
+Richtlinien
+blockiert
+und
+wurde
 deaktiviert
 .
 <
@@ -5914,6 +6158,20 @@ name
 "
 mozac_feature_addons_status_softblocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Diese
 Erweiterung
@@ -5934,6 +6192,75 @@ aktivieren
 dies
 kann
 aber
+riskant
+sein
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Diese
+Erweiterung
+ist
+eingeschr
+nkt
+wegen
+Versto
+es
+gegen
+Mozillas
+Richtlinien
+und
+wurde
+deaktiviert
+.
+Sie
+k
+nnen
+es
+aktivieren
+aber
+dies
+kann
 riskant
 sein
 .
