--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-eu/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-eu/strings.xml
@@ -4138,13 +4138,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4199,6 +4215,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4218,6 +4250,40 @@ hedapen
 hau
 instalatu
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Ezin
+da
+hedapena
+instalatu
 <
 /
 string
@@ -4575,6 +4641,67 @@ honentzako
 euskarririk
 plataforma
 honetan
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+(
+e
+)
+k
+Mozillaren
+politikak
+bortxatzen
+ditu
+eta
+ezin
+da
+instalatu
 .
 <
 /
@@ -5609,6 +5736,41 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Ikusi
+xehetasunak
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5664,6 +5826,131 @@ edo
 egonkortasun
 -
 arazoengatik
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+Hedapen
+honek
+Mozillaren
+politikak
+bortxatzen
+ditu
+eta
+desgaitu
+egin
+da
+.
+Gaitzeko
+aukera
+daukazu
+baina
+arriskutsua
+izan
+liteke
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Hedapen
+honek
+Mozillaren
+politikak
+bortxatzen
+ditu
+.
+Arriskutsua
+izan
+liteke
+hau
+erabiltzea
 .
 <
 /
