--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-gl/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-gl/strings.xml
@@ -4668,6 +4668,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Non
 se
@@ -4688,6 +4702,77 @@ de
 estabilidade
 ou
 seguridade
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+infrinxe
+as
+pol
+ticas
+de
+Mozilla
+e
+non
+se
+pode
+instalar
+en
+%
+2
+s
 .
 <
 /
@@ -4814,6 +4899,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4829,6 +4928,78 @@ non
 se
 pode
 instalar
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+infrinxe
+as
+pol
+ticas
+de
+Mozilla
+e
+non
+se
+pode
+instalar
+en
+%
+2
+s
 .
 <
 /
@@ -5948,6 +6119,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Desactivouse
 o
@@ -5961,6 +6146,72 @@ de
 estabilidade
 ou
 seguranza
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Esta
+extensi
+n
+est
+bloqueada
+por
+infrinxir
+as
+pol
+ticas
+de
+Mozilla
+e
+desactivouse
 .
 <
 /
@@ -6004,11 +6255,91 @@ name
 "
 mozac_feature_addons_status_softblocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Esta
 extensi
 n
 infrinxe
+as
+pol
+ticas
+de
+Mozilla
+e
+desactivouse
+.
+Podes
+activalo
+pero
+isto
+pode
+ser
+arriscado
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Esta
+extensi
+n
+est
+restrinxida
+por
+infrinxir
 as
 pol
 ticas
