--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-pt-rPT/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-pt-rPT/strings.xml
@@ -4686,6 +4686,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4710,6 +4724,78 @@ ou
 de
 seguran
 a
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+viola
+as
+pol
+ticas
+da
+Mozilla
+e
+n
+o
+pode
+ser
+instalado
+em
+%
+2
+s
 .
 <
 /
@@ -4839,6 +4925,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4855,6 +4955,79 @@ o
 pode
 ser
 instalado
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+viola
+as
+pol
+ticas
+da
+Mozilla
+e
+n
+o
+pode
+ser
+instalado
+em
+%
+2
+s
 .
 <
 /
@@ -5980,6 +6153,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -6023,6 +6210,73 @@ add
 on
 has
 been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Esta
+extens
+o
+est
+bloqueada
+por
+violar
+as
+pol
+ticas
+da
+Mozilla
+e
+foi
+desativada
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
 soft
 -
 blocked
@@ -6037,11 +6291,94 @@ name
 "
 mozac_feature_addons_status_softblocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Esta
 extens
 o
 viola
+as
+pol
+ticas
+da
+Mozilla
+e
+foi
+desativada
+.
+Pode
+ativ
+-
+lo
+mas
+isto
+pode
+ser
+perigoso
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Esta
+extens
+o
+est
+restrita
+por
+violar
 as
 pol
 ticas
