--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-sv-rSE/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-sv-rSE/strings.xml
@@ -4643,6 +4643,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4666,6 +4680,74 @@ s
 kerhetsproblem
 uppst
 r
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+bryter
+mot
+Mozillas
+policyer
+och
+kan
+inte
+installeras
+p
+%
+2
+s
 .
 <
 /
@@ -4794,6 +4876,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4806,6 +4902,75 @@ och
 kan
 inte
 installeras
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+bryter
+mot
+Mozillas
+policyer
+och
+kan
+inte
+installeras
+p
+%
+2
+s
 .
 <
 /
@@ -5921,6 +6086,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -5964,6 +6143,73 @@ add
 on
 has
 been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Detta
+till
+gg
+r
+blockerad
+f
+r
+att
+bryta
+mot
+Mozillas
+policyer
+och
+har
+inaktiverats
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
 soft
 -
 blocked
@@ -5978,6 +6224,20 @@ name
 "
 mozac_feature_addons_status_softblocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Det
 h
@@ -5985,6 +6245,76 @@ r
 till
 gget
 bryter
+mot
+Mozillas
+policyer
+och
+har
+inaktiverats
+.
+Du
+kan
+aktivera
+det
+men
+det
+kan
+vara
+riskabelt
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Detta
+till
+gg
+r
+begr
+nsat
+f
+r
+att
+bryta
 mot
 Mozillas
 policyer
