--- a/mobile/android/focus-android/app/src/main/res/values-ia/strings.xml
+++ b/mobile/android/focus-android/app/src/main/res/values-ia/strings.xml
@@ -1386,46 +1386,6 @@ navigation
 string
 >
 <
-string
-name
-=
-"
-notification_erase_text_android_14
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Tocca
-o
-clara
-iste
-aviso
-pro
-cancellar
-con
-securitate
-tu
-chronologia
-de
-navigation
-.
-<
-/
-string
->
-<
 !
 -
 -
@@ -7073,6 +7033,20 @@ name
 "
 onboarding_close_button_content_description
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Clauder
 <
@@ -10768,7 +10742,7 @@ cookie_banner_exception_panel_description_state_on_for_site
 %
 1
 s
-clarara
+radera
 le
 cookies
 de
@@ -10779,14 +10753,14 @@ actualisara
 le
 pagina
 .
-Clarar
+Rader
 tote
 le
 cookies
 pote
 clauder
 tu
-connexion
+session
 o
 vacuar
 tu
@@ -13215,56 +13189,6 @@ open_new_tab_snackbar
 "
 >
 Commutar
-<
-/
-string
->
-<
-!
--
--
-Text
-displayed
-in
-a
-notification
-when
-the
-user
-enters
-full
-screen
-mode
--
--
->
-<
-string
-name
-=
-"
-full_screen_notification
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Entrante
-in
-modo
-plen
-schermo
 <
 /
 string
