--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-en-rGB/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-en-rGB/strings.xml
@@ -4558,6 +4558,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4578,6 +4592,75 @@ stability
 or
 security
 problems
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+violates
+Mozilla
+s
+policies
+and
+can
+t
+be
+installed
+on
+%
+2
+s
 .
 <
 /
@@ -4704,6 +4787,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4717,6 +4814,76 @@ can
 t
 be
 installed
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+violates
+Mozilla
+s
+policies
+and
+can
+t
+be
+installed
+on
+%
+2
+s
 .
 <
 /
@@ -5819,6 +5986,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -5832,6 +6013,71 @@ security
 or
 stability
 issues
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+This
+extension
+is
+blocked
+for
+violating
+Mozilla
+s
+policies
+and
+has
+been
+disabled
 .
 <
 /
@@ -5875,10 +6121,91 @@ name
 "
 mozac_feature_addons_status_softblocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 This
 extension
 violates
+Mozilla
+s
+policies
+and
+has
+been
+disabled
+.
+You
+can
+enable
+it
+but
+this
+may
+be
+risky
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+This
+extension
+is
+restricted
+for
+violating
 Mozilla
 s
 policies
