--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-es-rAR/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-es-rAR/strings.xml
@@ -4635,6 +4635,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4782,6 +4796,20 @@ name
 =
 "
 mozac_feature_addons_soft_blocked
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 %
@@ -5917,6 +5945,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -5960,6 +6002,74 @@ add
 on
 has
 been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Esta
+extensi
+n
+est
+bloqueada
+por
+violar
+las
+pol
+ticas
+de
+Mozilla
+y
+ha
+sido
+deshabilitada
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
 soft
 -
 blocked
@@ -5973,6 +6083,20 @@ name
 =
 "
 mozac_feature_addons_status_softblocked
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Esta
@@ -5995,6 +6119,73 @@ habilitar
 pero
 podr
 a
+ser
+riesgoso
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Esta
+extensi
+n
+est
+restringida
+por
+violar
+las
+pol
+ticas
+de
+Mozilla
+y
+ha
+sido
+deshabilitada
+.
+Puede
+habilitarlo
+pero
+puede
 ser
 riesgoso
 .
