--- a/mobile/android/fenix/app/src/main/res/values-am/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-am/strings.xml
@@ -1423,6 +1423,20 @@ name
 "
 tcp_cfr_message
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 -
 <
@@ -1459,6 +1473,20 @@ name
 =
 "
 tcp_cfr_learn_more
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 <
@@ -1744,6 +1772,20 @@ name
 "
 tablet_nav_bar_cfr_title
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 -
 <
@@ -1780,6 +1822,20 @@ name
 =
 "
 tablet_nav_bar_cfr_message
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 <
@@ -4405,9 +4461,9 @@ etc
 Back
 button
 for
-the
-page
-tools
+all
+menu
+redesign
 sub
 -
 menu
@@ -5834,6 +5890,13 @@ name
 =
 "
 onboarding_home_screen_jump_back_contextual_hint_2
+"
+moz
+:
+removedIn
+=
+"
+132
 "
 >
 <
@@ -8587,68 +8650,6 @@ name
 "
 cookie_banner_handling_details_site_is_not_supported_request_support_button_2
 "
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-request
-support
-button
-indicating
-that
-cookie
-banner
-reduction
-is
-not
-supported
-for
-the
-current
-site
-this
-is
-shown
-as
-part
-of
-the
-cookie
-banner
-details
-view
-.
--
--
->
-<
-string
-name
-=
-"
-cookie_banner_handling_details_site_is_not_supported_request_support_button_3
-"
 >
 <
 /
@@ -8695,79 +8696,8 @@ name
 "
 cookie_banner_handling_details_site_is_not_supported_title_2
 "
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 ?
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-title
-indicating
-that
-cookie
-banner
-reduction
-is
-not
-supported
-for
-the
-current
-site
-this
-is
-shown
-as
-part
-of
-the
-cookie
-banner
-details
-view
-.
-The
-first
-parameter
-is
-the
-application
-name
--
--
->
-<
-string
-name
-=
-"
-cookie_banner_handling_details_site_is_not_supported_title_3
-"
->
-%
-1
-s
--
 <
 /
 string
@@ -8951,68 +8881,8 @@ name
 "
 reduce_cookie_banner_unsupported_site
 "
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 -
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-indicating
-cookie
-banner
-handling
-is
-currently
-not
-supported
-for
-this
-site
-this
-is
-shown
-as
-part
-of
-the
-protections
-panel
-with
-the
-tracking
-protection
-toggle
--
--
->
-<
-string
-name
-=
-"
-reduce_cookie_banner_unsupported_site_1
-"
->
 <
 /
 string
@@ -9194,77 +9064,10 @@ name
 "
 reduce_cookie_banner_details_panel_title_unsupported_site_request_2
 "
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 %
 1
 s
-<
-/
-string
->
-<
-!
--
--
-Title
-text
-for
-a
-detail
-explanation
-indicating
-cookie
-banner
-reducer
-didn
-'
-t
-work
-for
-the
-current
-site
-this
-is
-shown
-as
-part
-of
-the
-cookie
-banner
-panel
-in
-the
-toolbar
-.
--
--
->
-<
-string
-name
-=
-"
-reduce_cookie_banner_details_panel_title_unsupported_site_request_3
-"
->
--
--
 <
 /
 string
@@ -17640,6 +17443,135 @@ string
 !
 -
 -
+Unsubmitted
+crash
+dialog
+title
+The
+first
+parameter
+is
+the
+name
+of
+the
+app
+(
+e
+.
+g
+.
+Firefox
+)
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_title
+"
+>
+%
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Unsubmitted
+crash
+dialog
+checkbox
+label
+for
+automatically
+sending
+reports
+in
+the
+future
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_checkbox_label
+"
+>
+-
+<
+/
+string
+>
+<
+!
+-
+-
+Unsubmitted
+crash
+dialog
+negative
+button
+to
+dismiss
+the
+dialog
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_negative_button
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Unsubmitted
+crash
+dialog
+positive
+button
+to
+submit
+crash
+report
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_positive_button
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Bookmarks
 -
 -
@@ -18279,6 +18211,37 @@ string
 !
 -
 -
+Text
+indicating
+which
+folder
+a
+bookmark
+or
+folder
+will
+be
+saved
+in
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_save_in_label
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Bookmark
 NAME
 editing
@@ -18293,6 +18256,37 @@ name
 =
 "
 bookmark_name_label
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+a
+text
+input
+field
+for
+a
+bookmark
+or
+folder
+name
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_name_label_normal_case
 "
 >
 <
@@ -18658,6 +18652,20 @@ name
 "
 bookmark_close_button_content_description
 "
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+130
+"
 >
 <
 /
@@ -18727,6 +18735,32 @@ bookmark_item_menu_button_content_description
 >
 %
 s
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+the
+bookmark
+list
+empty
+state
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_title
+"
+>
 <
 /
 string
@@ -37125,6 +37159,20 @@ name
 "
 review_quality_check_first_cfr_message
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 <
 /
@@ -37164,6 +37212,13 @@ name
 "
 review_quality_check_first_cfr_action
 "
+moz
+:
+removedIn
+=
+"
+132
+"
 tools
 :
 ignore
@@ -37201,6 +37256,20 @@ name
 =
 "
 review_quality_check_second_cfr_message
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 ?
@@ -37241,6 +37310,13 @@ name
 =
 "
 review_quality_check_second_cfr_action
+"
+moz
+:
+removedIn
+=
+"
+132
 "
 tools
 :
@@ -43797,7 +43873,9 @@ string
 Text
 shown
 in
-prompt
+the
+survey
+title
 for
 printing
 microsurvey
@@ -43846,7 +43924,9 @@ string
 Text
 shown
 in
-prompt
+the
+survey
+title
 for
 homepage
 microsurvey
@@ -44361,6 +44441,20 @@ name
 "
 exit_fullscreen_with_gesture
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 <
 /
@@ -44393,6 +44487,20 @@ name
 =
 "
 exit_fullscreen_with_back_button
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 <
