--- a/mobile/android/fenix/app/src/main/res/values-ia/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-ia/strings.xml
@@ -10587,7 +10587,7 @@ e
 %
 1
 s
-clarara
+radera
 le
 cookies
 e
@@ -10597,11 +10597,11 @@ sito
 .
 Isto
 pote
-disconnecter
-le
-section
+clauder
+tu
+session
 o
-vacuara
+vacuar
 le
 carrettos
 de
@@ -35902,7 +35902,7 @@ name
 clear_site_data
 "
 >
-Clarar
+Rader
 le
 cookies
 e
@@ -35957,7 +35957,7 @@ secur
 que
 tu
 vole
-clarar
+rader
 tote
 le
 cookies
